@@ -50,7 +50,7 @@ Global Controller files from now on. -- added to user guide
 - removed all php closing tags from all php files (thanks to phpyuz)
 - fixed db.php self::_is_assoc() function bug, removed is_array() added php sizeof() function.
 - added alnum_upper and alnum_lower options to random_string() function (string helper) -- added to user guide
-- fixed class_exists($model, false) // autoload false bug in private loader::_model() fucntion.
+- fixed class_exists($model, false) // autoload false bug in private loader::_model() function.
 - depreciated encrypt class sha1 function , renamed hash() method as hash_encode. (thanks to phpyuz for good suggestions)
 //-----------------------------------------------------------------------------
 
@@ -72,12 +72,14 @@ forexample ...
 @todo .. postgreSQL connection bug ...
 @todo .. rename ob class as Obullo , fix instance name as Obullo::instance() 
 @todo .. put archived doc meta tag to old user guide base layout ..
+$todo .. look at globally set database object from app_controller.
 @todo .. upload class security fix
 @todo .. depreciate ob::instance() function and use this() funtion everywhere.
 @todo .. start extends Form_controller.. an autload function will load forms.. from /parents folder.
 developer should be edit all forms in same directory .. 
 
 
+@next add user_guide pages to svn as static html.
 @next version todo .. pager class   
 @next version todo .. datamapper class
 @next version todo .. add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
